--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
   "description": "PassXYZ UI using React",
   "main": "app.js",
   "scripts": {
+    "build": "node_modules/.bin/webpack -p --config webpack.config.js",
+    "build-dev": "node_modules/.bin/webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Roger Ye",
   "license": "Appache",
   "devDependencies": {
-    "babelify": "^6.2.0",
-    "browserify": "^11.0.1",
-    "gulp": "^3.9.0",
-    "vinyl-source-stream": "^1.1.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "gulp": "^3.9.1",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^3.8.1",
+    "webpack-cli": "^3.3.1"
   },
   "dependencies": {
-    "react": "^0.14.0-beta3",
-    "react-dom": "^0.14.0-beta3",
-    "markdown-it": "^8.4.2"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-input-password": "^1.0.21",
+    "react-markdown": "^4.0.8"
   }
 }
