--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "gulp",
-            "task": "default",
+            "type": "npm",
+            "script": "build-dev",
+            "problemMatcher": [],
             "group": {
                 "kind": "build",
                 "isDefault": true
